# Blade

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ClionCodeStyleScheme.xml  LICENSE  README.md  Roadmap.md  Taskfile.yml  code_listing.py
Api/: ApiBackend.h  ApiWidget.h  CMakeLists.txt  api.h
Api/Api/: ApiBackend.h  ApiWidget.h  BackendCommand.h  CommandType.h  EventMap.h  PropertyMap.h  RenderCommand.h  WidgetTree.h
Api/Backend/: BackendNode.h  export.h
Api/Callback/: Callbacks.h
Api/Command/: AppCommand.h  AppCommandType.h  ElementCommand.h  ElementCommandType.h
Api/Common/: Callbacks.h  CaptionProps.h  Color.h  Common.h  CommonTypes.h  Events.h  LayoutProps.h  Lifetime.h  Logger.h  MenuData.h  MenuTrigger.h  Modifier.h  Point.h  Property.h  Props.h  Rect.h  Shortcut.h  Size.h  Thickness.h  Types.h  WidgetType.h  WindowPlacementProps.h  WindowState.h
Api/Events/: BackendEvent.h  EventContext.h  EventPayload.h  EventResult.h  Events.h
Api/Fabric/: WindowPlacement.h
Api/Geometry/: Point.h  Rect.h  Size.h  Thickness.h
Api/Logging/: Logger.h
Api/Menu/: MenuData.h  MenuTrigger.h  Shortcut.h
Api/Message/: BackendMessage.h  BackendMessageType.h
Api/Render/: RenderCommand.h  RenderCommandType.h  RenderOp.h
Api/Struct/: Rect.h
Api/Style/: Color.h
Api/Widget/: ComponentType.h  WidgetType.h
Api/Window/: CaptionProps.h  WindowPlacementProps.h  WindowState.h
Backend/: CMakeLists.txt  backend.h  pch.h
Backend/App/: AppBackend.cpp  AppBackend.h
Backend/AppCommandDispatcher/: AppCommandDispatcher.cpp  AppCommandDispatcher.h
Backend/CommandDispatcher/: CommandDispatcher.cpp  CommandDispatcher.h
Backend/Components/Button/: NativeButton.cpp  NativeButton.h  NativeButtonEvents.cpp  NativeButtonEvents.h  NativeButtonProps.cpp  NativeCustomButton.cpp  NativeCustomButton.h
Backend/Components/ContextArea/: NativeContextArea.cpp  NativeContextArea.h
Backend/Components/RenderSurface/: RenderSurface.cpp  RenderSurface.h
Backend/Components/Tray/: NativeTray.cpp  NativeTray.h
Backend/Components/Window/: NativeWindow.cpp  NativeWindow.h  NativeWindowEvents.cpp  NativeWindowEvents.h  NativeWindowProps.cpp  NativeWindowProps.h
Backend/Context/: WinAppContext.cpp  WinAppContext.h
Backend/Debug/: DebugProps.h  LayoutDebugTheme.h
Backend/Debug/DebugPainter/: DebugPainter.cpp  DebugPainter.h
Backend/Debug/LayoutDebugRenderer/: LayoutDebugRenderer.cpp  LayoutDebugRenderer.h
Backend/Debug/NativeDraw/: NativeDraw.cpp  NativeDraw.h
Backend/Event/EventMapper/: EventMapper.cpp  EventMapper.h
Backend/Handlers/CommandHandler/: CommandHandler.cpp  CommandHandler.h
Backend/Handlers/InputHandler/: InputHandler.cpp  InputHandler.h
Backend/Handlers/PaintHandler/: PaintHandler.cpp  PaintHandler.h
Backend/Handlers/WindowHandler/: WindowHandler.cpp  WindowHandler.h
Backend/Helpers/: Helpers.h  WinUtils.h
Backend/Materializer/: Materializer.cpp  Materializer.h
Backend/NativeApp/: NativeApp.cpp  NativeApp.h
Backend/Node/NativeBindingRegistry/: NativeBindingRegistry.cpp  NativeBindingRegistry.h
Backend/Node/NativeCreateContext/: NativeCreateContext.h
Backend/Node/NativeFactoryRegistry/: NativeFactoryRegistry.cpp  NativeFactoryRegistry.h
Backend/Node/NativeNode/: NativeNode.cpp  NativeNode.h
Backend/Node/NativeNodeFactory/: NativeNodeFactory.cpp  NativeNodeFactory.h
Backend/Node/NodeRegistry/: NodeRegistry.cpp  NodeRegistry.h
Backend/Node/WinNode/: WinNode.cpp  WinNode.h
Backend/Property/: PropertyReader.h
Backend/Property/NativePropertyMapper/: NativePropertyMapper.cpp  NativePropertyMapper.h
Backend/Property/PropertyMapUtils/: PropertyMapUtils.cpp  PropertyMapUtils.h
Backend/Property/PropertyMapper/: PropertyMapper.cpp  PropertyMapper.h
Backend/Registry/ClassRegistry/: ClassRegistry.h
Backend/Registry/ResourceRegistry/: ResourceRegistry.cpp  ResourceRegistry.h
Backend/Render/RenderCommandDispatcher/: RenderCommandDispatcher.cpp  RenderCommandDispatcher.h
Backend/Render/RenderNode/: RenderNode.h
Backend/Render/RenderRegistry/: RenderRegistry.cpp  RenderRegistry.h
Backend/Render/SurfaceElementState/: SurfaceElementState.h
Backend/Render/SurfaceHitTest/: SurfaceHitTest.cpp  SurfaceHitTest.h
Backend/Render/SurfaceInteraction/: SurfaceInteraction.cpp  (+1 more)
Backend/UI/: UI.h
Backend/WinApp/: WinApp.cpp  WinApp.h
Backend/WinBackend/: WinBackend.cpp  WinBackend.h
Backend/WinInit/: WinInit.cpp  WinInit.h
Backend/WinWidget/: WinWidget.cpp
Backend/WinWindow/: WinWindow.cpp  WinWindow.h
Backend/Window/: NativeWindow.cpp  NativeWindow.h  Window.cpp  Window.h
Backend/WindowHost/: WindowHost.cpp  WindowHost.h
Blade/: CMakeLists.txt  api.h  blade.h  pch.h
Blade/Api/: ApiAppBackend.h  ApiBackend.h  ApiWidget.h  AppBackend.h
Blade/App/: App.cpp  App.h
Blade/Base/: RootWidget.h  Widget.h  WidgetNode.h  WidgetTree.h
Blade/Context/: AppContext.h  WidgetContext.h
Blade/Core/: Core.h  Encoding.h  Rect.h
Blade/Debug/: DebugBrushProps.h  DebugProps.h  LayoutDebugTheme.h
Blade/Materializer/: Materializer.cpp  Materializer.h
Blade/Mixin/: EventMixin.h  PropsMixin.h
Blade/Render/: Render.cpp  Render.h
Blade/Runtime/: Normalize.h  PropertyVisitor.h  VisitCallback.h
Blade/UI/: UI.cpp  UI.h
Blade/UiNode/: UiNode.cpp  UiNode.h
Blade/Widget/: Widget.cpp  Widget.h
Blade/WidgetNode/: WidgetNode.cpp  WidgetNode.h
Blade/WidgetsCallbacks/: Callback.h
Example/: CMakeLists.txt  main.cpp  pch.h
Example/Resource/: App.manifest  App.rc
Tests/: CMakeLists.txt  main.cpp
Tests/Core/: Expect.h  TestRunner.cpp  TestRunner.h
Tests/Layout/: LayoutAlignmentTests.cpp  LayoutAlignmentTests.h  LayoutConstraintsTests.cpp  LayoutConstraintsTests.h  LayoutFlexTests.cpp  LayoutFlexTests.h  LayoutGeometryTests.cpp  LayoutGeometryTests.h  LayoutPaddingTests.cpp  LayoutPaddingTests.h  LayoutRootModifierTests.cpp  LayoutRootModifierTests.h  LayoutSpacingTests.cpp  LayoutSpacingTests.h  LayoutStackTests.cpp  LayoutStackTests.h  LayoutTestUtils.h
Tests/ModifierTree/: ModifierTreeTests.cpp  ModifierTreeTests.h
(+463 files in other folders)
